Update Econometric & Financial Modeling .ipynb

--- a/Econometric & Financial Modeling .ipynb
+++ b/Econometric & Financial Modeling .ipynb
@@ -177,7 +177,7 @@
     }
    ],
    "source": [
-    "# ✅ STEP 8: GARCH(1,1) Modeling of Stock Return Volatility\n",
+    "# STEP 8: GARCH(1,1) Modeling of Stock Return Volatility\n",
     "garch_model = arch_model(data['AAPL_Return'], vol='GARCH', p=1, q=1)\n",
     "garch_results = garch_model.fit(disp='off')\n",
     "print(\"\\nGARCH Results:\\n\", garch_results.summary())"
@@ -448,26 +448,26 @@
    "metadata": {},
    "source": [
     "* ARIMA(1,0,0) Model Summary — Nigeria Inflation Rate (2010–2023)\n",
-    "🔍 Model Description\n",
+    " Model Description\n",
     "Type: ARIMA(1, 0, 0) — First-order autoregressive model\n",
     "\n",
     "Sample Size: 14 observations (annual data from 2010 to 2023)\n",
     "\n",
     "Forecasting Goal: Predict short-term future inflation rates for Nigeria.\n",
     "\n",
-    "📊 Model Output Summary\n",
+    " Model Output Summary\n",
     "Parameter\tCoefficient\tp-Value\tInterpretation\n",
     "Intercept\t3.3825\t0.284\tNot statistically significant\n",
     "AR(1)\t0.7827\t0.000\tStrong persistence in inflation\n",
     "Sigma²\t10.2391\t0.051\tModerate error variance (almost significant)\n",
     "\n",
-    "🧪 Model Diagnostics\n",
+    " Model Diagnostics\n",
     "Test\tResult\tp-Value\tInterpretation\n",
     "Ljung-Box (autocorr)\t1.22\t0.27\t✔️ No autocorrelation in residuals\n",
     "Jarque-Bera (normality)\t0.66\t0.72\t✔️ Residuals are normally distributed\n",
     "Heteroskedasticity (H)\t1.68\t0.58\t✔️ No evidence of changing error variance\n",
     "\n",
-    "📌 Interpretation\n",
+    " Interpretation\n",
     "Inflation Persistence:\n",
     "The AR(1) term of 0.78 shows that past inflation significantly drives current inflation — a sticky inflation dynamic.\n",
     "\n",
@@ -480,8 +480,8 @@
     "Forecasting Validity:\n",
     "Residual checks confirm the model is well-specified, making it suitable for short-term inflation forecasting.\n",
     "\n",
-    "📌 Recommendations\n",
-    "🏦 Central Bank should expect inflation inertia and adjust interest rate policies accordingly.\n",
+    " Recommendations\n",
+    " Central Bank should expect inflation inertia and adjust interest rate policies accordingly.\n",
     "\n",
     "📉 Use ARIMA-based models for short-term inflation guidance.\n",
     "\n",
@@ -758,7 +758,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "📌 DID Analysis: CBN FX Reform Impact\n",
+      " DID Analysis: CBN FX Reform Impact\n",
       "                             OLS Regression Results                            \n",
       "==============================================================================\n",
       "Dep. Variable:          exchange_rate   R-squared:                       0.991\n",
@@ -815,7 +815,7 @@
     "X_did = sm.add_constant(did_df[['post', 'treated_flag', 'did']])\n",
     "y_did = did_df['exchange_rate']\n",
     "did_result = sm.OLS(y_did, X_did).fit()\n",
-    "print(\"\\n📌 DID Analysis: CBN FX Reform Impact\\n\", did_result.summary())\n"
+    "print(\"\\n DID Analysis: CBN FX Reform Impact\\n\", did_result.summary())\n"
    ]
   },
   {
@@ -852,13 +852,13 @@
    "metadata": {},
    "source": [
     "* Interpretation\n",
-    "✅ The DID coefficient (300.00) is statistically significant (p < 0.001), indicating a strong causal effect of the FX reform on exchange rates.\n",
+    " The DID coefficient (300.00) is statistically significant (p < 0.001), indicating a strong causal effect of the FX reform on exchange rates.\n",
     "\n",
-    "📈 The reform raised the exchange rate by ₦300 more for the treated group compared to the control group, after accounting for time and group trends.\n",
+    " The reform raised the exchange rate by ₦300 more for the treated group compared to the control group, after accounting for time and group trends.\n",
     "\n",
-    "📉 The post-only effect (₦76.67) shows some rise even for the control, but not nearly as much.\n",
+    " The post-only effect (₦76.67) shows some rise even for the control, but not nearly as much.\n",
     "\n",
-    "⚠️ The treated_flag is not significant, suggesting the groups were comparable before the reform (parallel trends likely valid).\n",
+    " The treated_flag is not significant, suggesting the groups were comparable before the reform (parallel trends likely valid).\n",
     "\n",
     "Conclusion\n",
     "The analysis strongly supports the positive impact of the CBN FX reform on the exchange rate. The significant DID term confirms that the policy led to a measurable increase in the exchange rate for the treated group, above general post-period effects."
@@ -892,7 +892,7 @@
     "\n",
     "---\n",
     "\n",
-    "## 📁 Files Included\n",
+    "## Files Included\n",
     "- `Econometric & Financial Modeling.ipynb`: Complete interactive notebook with code, visualizations, and analysis.\n",
     "- `nigeria_macro_data.csv`: Historical Nigeria GDP & inflation data.\n",
     "- `nigeria_inflation_forecast.csv`: ARIMA forecast for inflation.\n",
